# Concepts-understanding-rust

./: .gitignore  Cargo.toml  Concepts-understanding-rust  LICENSE  README.md  concepts_in_points.md  hi.py  projects.md
hi/: story.txt
src/: function.rs  lib.rs  main.rs
